UI minor changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,8 @@
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="shadow">#CFCECE</color>
-    <color name="logger">#000000</color>
-    <color name="background_info_box">#135A88</color>
-
+   <!--Gradient-->
+    <color name="gradientStart">#DBEBA3</color>
+    <color name="gradientEnd">#EEBA00 </color>
 
 </resources>
