--- a/app/src/main/res/layout/activity_sensors_info_new.xml
+++ b/app/src/main/res/layout/activity_sensors_info_new.xml
@@ -25,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_sensors"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
 
@@ -44,10 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_dashboard"
-            android:layout_marginTop="1dp"
             android:text="Cristian"
             android:textStyle="bold"
-            android:textColor="@color/background_info_box"
+            android:textColor="#295AAC"
             android:textSize="16sp"/>
 
 
@@ -70,7 +68,9 @@
         android:layout_rowWeight="1"
         app:cardElevation="8dp"
         app:cardCornerRadius="12dp"
-        android:layout_margin="10dp">
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -147,17 +147,18 @@
     </androidx.cardview.widget.CardView>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/view_header">
+        android:layout_below="@id/cardview_user_info">
 
         <!--Grid layout which contains all the card views of each sensor-->
         <GridLayout
+            android:id="@+id/gridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:columnOrderPreserved="true"
             android:alignmentMode="alignMargins"
-            android:layout_marginTop="35dp"
             android:rowCount="3"
             android:columnCount="2">
 
@@ -282,8 +283,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
                     android:gravity="center"
+                    android:orientation="vertical"
                     android:padding="16dp">
 
                     <ImageView
@@ -297,10 +298,10 @@
                         android:id="@+id/textView_position"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:gravity="center"
                         android:layout_marginTop="12dp"
+                        android:gravity="center"
                         android:text="null"
-                        android:textSize="15sp"/>
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
@@ -325,7 +326,7 @@
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:src="@drawable/gps_vector">
+                        android:src="@drawable/ic_pressure_gauge">
 
                     </ImageView>
 
@@ -361,7 +362,42 @@
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:src="@drawable/gps_vector">
+                        android:src="@drawable/altitude">
+
+                    </ImageView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_marginTop="12dp"
+                        android:text="null"
+                        android:textSize="15sp"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:src="@drawable/walk">
 
                     </ImageView>
 
@@ -381,6 +417,35 @@
         </GridLayout>
 
     </ScrollView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp"
+        android:layout_margin="20dp"
+        android:layout_alignBottom="@id/scrollView"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/gradient_calories">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Calories Burnt"
+                android:textStyle="bold"
+                android:textColor="#B14848"
+                android:gravity="center"/>
+
+
+        </RelativeLayout>
+
+
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 
