--- a/app/src/main/res/layout/activity_sensors_info.xml
+++ b/app/src/main/res/layout/activity_sensors_info.xml
@@ -160,7 +160,7 @@
             android:columnOrderPreserved="true"
             android:alignmentMode="alignMargins"
             android:rowCount="3"
-            android:columnCount="3">
+            android:columnCount="2">
 
             <androidx.cardview.widget.CardView
                 android:layout_height="wrap_content"
@@ -367,6 +367,7 @@
                     </ImageView>
 
                     <TextView
+                        android:id="@+id/pressure_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -402,6 +403,7 @@
                     </ImageView>
 
                     <TextView
+                        android:id="@+id/pedometer_text_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
