--- a/app/src/main/res/menu/toolbar_menu_sensors.xml
+++ b/app/src/main/res/menu/toolbar_menu_sensors.xml
@@ -7,6 +7,18 @@
         android:title="@string/menu_connect"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/action_disconnect"
+        android:title="@string/menu_disconnect"
+        app:showAsAction="always"
+        android:visible="false"/>
+
+    <item
+        android:id="@+id/action_emergency"
+        android:icon="@drawable/sos"
+        app:showAsAction="always"
+        android:title="" />
+
     <item android:id="@+id/action_connect_to_peripheral"
         android:title="Scan Remote Devices"
         app:showAsAction="never"
@@ -16,12 +28,6 @@
         android:title="@string/toolbar_sensors_mqtt"
         app:showAsAction="never"
         android:enabled="false"/>
-
-    <item
-        android:id="@+id/action_disconnect"
-        android:title="@string/menu_disconnect"
-        app:showAsAction="always"
-        android:visible="false"/>
 
     <item android:id="@+id/action_graph_rssi"
         android:title="@string/toolbar_sensors_rssi"
