--- a/app/src/main/res/layout/activity_sensors_info.xml
+++ b/app/src/main/res/layout/activity_sensors_info.xml
@@ -50,13 +50,25 @@
             android:textColor="#295AAC"
             android:textSize="16sp"/>
 
-
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/profile_picture"
+            android:layout_alignParentEnd="true"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="changeProfilePic"/>
+        <!--<ImageView
+            android:id="@+id/profile_image"
             android:layout_width="54dp"
             android:layout_height="54dp"
             android:src="@drawable/profile_picture"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:onClick="changeProfilePic"/>-->
 
     </RelativeLayout>
 
